--- a/smal project/index.html
+++ b/smal project/index.html
@@ -9,57 +9,193 @@
     <link rel="stylesheet"  href=fontawesome-free-5.15.1-web/css/all.min.css>
 </head>
 <body>
+	<script>
+		alert("this is a design just")
+	</script>
+	<div class="container">
+		<div class="row" id="you">
+			<div class="col-md-4">
+				<h3><i class="fas fa-fan"></i>TEMPRATE design</h3>
+			</div>
+			<div class="col-md-8">
+				<ul id="hus">
+					<li><a href="">Home</a></li>
+					<li><a href="">services</a></li>
+					<li><a href="">Contact Us</a></li>
+					<li><a href="">Our Work</a></li>
+					<li><a href="">Rana</a></li>
+				</ul>
+			</div>
+		</div>
+	</div>
+	<div class="container" id="joo">
+		<div class="row">
+			<div class="col-md-5" id="nich">
+				<h4>Designer Fame<i class="fab fa-aws"></i></h4>
+				<p>Designer is a good fame and you have aply for frre lancind and you grow your own bussniess for therir development</p>
+			</div>
+		</div>
+	</div>
+	<div class="container">
+		<div class="row" id="btn">
+			<div class="col-md-12" id="click">
+				<h4>Production of your Bussness</h4>
+				<h5>Web Development Phython and java script</h5>
+				<div class="btn btn-primary">Click tO read</div>
+			</div>
+		</div>
+	</div>
+	<div class="container">
+		<div class="row" id="hmm">
+			<div class="col-md-5">
+				<a href="">Ruseme.</a>is the most impotrant for your course becuse its isss the famework mean your future in this your betternass the web development is to<br><br> easy but its need timets isss the famework mean your future in this your betternass the web development is to easy but its need time
+			</div>
+			<div class="col-md-7">
+				<h4 id="brand"><i class="fab fa-envira fa-3x" id="brand"></i><i class="fas fa-address-book fa-3x" id="brand"></i><i class="fab fa-algolia fa-3x" id="brand"></i></h4>
+			</div>
+		</div>
+	</div>
+	<div class="container">
+		<div class="row">
+			<div class="col-md-8">
+				<h4>New design</h4>
+				<p>The new template design you also visit this site<br>
+					<a href="">www.husnain.0.com</a></p>
+			</div>
+			<div class="col-md-4">
+				<i class="fas fa-box fa-4x" id="box"></i>
+			</div>
+		</div>
+	</div>
+	<div class="container">
+		<div class="row">
+		<div class="col-md-12">
+			<i class="fas fa-suitcase fa-4x" id="manak"></i>The new template design you also visit this siteBelevime me its a good site<br><a href="">www.husnain.0.com</a>
+		</div>
+	</div>
+	</div>
+	<div class="container" id="teach">
+		<div class="row">
+		<div class="col-md-6">
+			<h2 id="rana">Indrdruction To<br> Web Develoment</h2>
+			<div class="btn" id="rana1"><i class="fas fa-play" id="rana1"></i>Watch Now</div><br>
+			<p class="old">s the most impotrant for your course becuse its isss the famework mess the famework mean your futrnass th</p>
+			<p class=old>s the most s the most iour course becuse its isss the famework mean your futrnass the  betternass the </p>
+		</div>
+		</div>
+	</div>
+	<div class="container">
+		<div class="row"id="space">
+		<div class="col-md-6">
+			<h4 id="zem"><a href="">App Development</a></h4>
+			<p> ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
+			<h4 id="zem"><a href="">Application Development</a></h4>
+			<p> ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
+			<h4 id="zem"><a href="">Softwere Development</a></h4>
+			<p> ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
+			<h4 id="zem"><a href="">Ios Version</a></h4>
+			<p> ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
+		</div>
+		<div class="col-md-6">
+			<h4 id="zem"><a href="">Andriod</a></h4>
+			<p> ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
+			<h4 id="zem"><a href="">Windows Development</a></h4>
+			<p> ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
+			<h4 id="zem"><a href="">Microsoft</a></h4>
+			<p> ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
+			<h4 id="zem"><a href="">Upated Version</a></h4>
+			<p> ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
+		</div>
+	</div>
+	</div>
 	<div class="container">
 		<div class="row">
 			<div class="col-md-12">
-				<img src="img.jpg" id="ime">
+				<h4 style="text-align: center;" id="last">Ideas Studies</h4>
 			</div>
 		</div>
 	</div>
-	<div class="container">
+	<div class="container" style="padding-bottom:40px">
+		<div class="row" id="hys">
+			<div class="col-md-3">
+				<h4 id="second"><a href="">Ideas Studies</a></h4>
+				<p>Booking of your google achevie it is the most important for your adversiment beacuse in future and when you got project from custemer
+				you have expericene for you do to get project</p>
+				<a href="">Read More</a>
+			</div>
+			<div class="col-md-3">
+				<h4 id="second"><a href="">Free Lancing</a></h4>
+				<p>Booking of your google achevie it is the most important for your adversiment beacuse in future and when you got project from custemer
+				you have expericene for you do to get project</p>
+				<a href="">Read More</a>
+			</div>
+			<div class="col-md-3">
+				<h4 id="second"><a href="">Marking</a></h4>
+				<p>Booking of your google achevie it is the most important for your adversiment beacuse in future and when you got project from custemer
+				you have expericene for you do to get project</p>
+				<a href="">Read More</a>
+			</div>
+			<div class="col-md-3">
+				<h4 id="second"><a href="">Checking</a></h4>
+				<p>Booking of your google achevie it is the most important for your adversiment beacuse in future and when you got project from custemer
+				you have expericene for you do to get project</p>
+				<a href="">Read More</a>
+			</div>
+		</div>
+	</div>
+	<div class="container" id="last1">
 		<div class="row">
-			<div class="col-md-8" id="boy">
-				<h2 id="me">Who I am</h2>
-				<p id="meh"> I am husnain and i have 1year+experecne <br>in web development and ia aslo work in <br>softwere company in USA
-					i am a web developer and my expetation with country
-				</p>
-				
-				<h2 id="me">What i want</h2>
-				<p id="meh">
-					i what that every child of my nation read programing<br> and i have idea to bulid you I am husnain and i have 1year+experecne
-				</p>
-				</div>
-
-						<div class="col-md-4" id="haha">
-				<h4 id="cse">HtMl and Css<br>
-				<i class="fab fa-html5 fa-2x"></i>
-				<i class="fab fa-css3-alt fa-2x"></i></h4>
-				<h4 id="cse">Bostrap<br>
-				<i class="fab fa-bootstrap fa-2x"></i></h4>
-				<h4 id="cse">Java script<br>
-				<i class="fab fa-js fa-2x"></i></h4>
-				<h4 id="cse">Php Programing<br>
-                 <i class="fab fa-php fa-2x"></i>
-				</h4>
+			<div class="col-md-12" style="text-align: center;">
+				<h5>WE are<a href="">CNIC</a>graduted project</h5>
+				<h1><i class="fas fa-fan"></i><b>CLOUD NAVTIVE</b></h1>
+				<h5>Computering Foundation</h5>
 			</div>
 		</div>
 	</div>
-	<div class="container">
+	<div class="container" style="background-color: hsl(0,0%,95%);">
+		<div class="row" style="padding-bottom:30px">
+			<div class="col-md-12" style="text-align: center;">
+				<p id="last2">Receving you mail please sing in to get notification</p>
+				Email Adress
+				<input type="text" name="" placeholder="Email"><br><br>
+				For message<br><br>
+				<textarea class="text" cols="10" rows="10" id="message" placeholder="Write message"></textarea>
+			</div>
+		</div>
+	</div>
+	<div class="container" id="payar">
 		<div class="row">
-			<div class="col-md-6">
-				<img src="arrow2.jpg" id="no">
+			<div class="col-md-12">
+				<ul id="last3">
+					<li><a href="">Home</a></li>
+					<li><a href="">services</a></li>
+					<li><a href="">Contact Us</a></li>
+					<li><a href="">Our Work</a></li>
+					<li><a href="">Rana</a></li>
+					<li><a href="">Our Work</a></li>
+					<li><a href="">Help</a></li>
+				</ul>
+				<div style="float:left;" id="kuriy">
+				<a href=""><i class="fab fa-facebook-f"></i></a>
+					<a href=""><i class="fab fa-linkedin-in"></i></a>
+					<a href=""><i class="fas fa-fax"></i></a>
+					<a href=""><i class="fas fa-envelope-square"></i></a>
 			</div>
-			<div class="col-md-6">
-				<img src="arrow.jpg" id="noo">
-				<h3>Its arrow for your building</h3>
-			</div>
-		</div>
-	</div>
-	<div class="container">
-		<div class="row" id="last">
-			<div class="col-md-12" id="footer">
-				<h5>Contact us<br>
-				03521398990</h5>
+				<div style="float: right;" id="kuri">
+					<a href=""><i class="fab fa-facebook-f"></i></a>
+					<a href=""><i class="fab fa-linkedin-in"></i></a>
+					<a href=""><i class="fas fa-fax"></i></a>
+					<a href=""><i class="fas fa-git"></i></a>
+				</div><br><br>
+				<h5 style="text-align: center;" id="huss"><i>Developed By<a href="">Rana Husnain</a> </i></h5>
 			</div>
 		</div>
 	</div>
